--- a/src/app.html
+++ b/src/app.html
@@ -10,3 +10,60 @@
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
+
+<style>
+body { 
+background-position: left top; 
+font-family: 'Inter', sans-serif;
+margin: 0; 
+background-repeat: no-repeat;
+}
+
+* {
+	box-sizing: border-box;
+}
+
+a {
+text-decoration: none;
+color: black;
+}
+
+nav { 
+position: sticky; 
+top: 0; 
+left: 5; 
+right: 0; 
+margin: 0 80px 0 80px; 
+padding-top: 2rem; 
+padding-bottom: 2rem;
+}
+
+nav .nav-container { 
+display: flex; 
+justify-content: space-between;
+align-items: center;
+}
+
+.nav-links { 
+display: flex;
+justify-content: flex-end;
+align-items: center;
+margin: -1em 0;
+flex: 1 0 auto;
+}
+
+.nav-links .link { 
+	position: relative;
+	margin: 1rem;
+	font-size: 0.85rem;
+	letter-spacing: 1px;
+	color: black;
+}
+
+.nav-logo {
+	position: relative;
+	line-height: 1;
+	font-size: 1.1rem;
+	color: black;
+}
+</style>
